// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots B API 1`] = `
.c0 {
  font-weight: bold;
}

<B>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "
  font-weight: bold;
",
          ],
        },
        "displayName": "B",
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "b",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <b
      className="c0"
    >
      Bold content
    </b>
  </StyledComponent>
</B>
`;

exports[`Storyshots B CJK 1`] = `
.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0;
  font-weight: normal;
  font-size: 1.15rem;
}

<Heading
  level={4}
>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-weight: normal;
  font-size: ",
            [Function],
            ";
  ",
            [Function],
            ";
",
          ],
        },
        "defaultProps": Object {
          "level": 1,
        },
        "displayName": "Heading",
        "propTypes": Object {
          "color": [Function],
          "level": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
    level={4}
  >
    <BaseComponent
      className="c0"
      level={4}
    >
      <h4
        className="c0"
      >
        <B>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bwzfXH",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  font-weight: bold;
",
                  ],
                },
                "displayName": "B",
                "render": [Function],
                "styledComponentId": "sc-bwzfXH",
                "target": "b",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <b
              className="c1"
            >
              控制開關粗體字
            </b>
          </StyledComponent>
        </B>
      </h4>
    </BaseComponent>
  </StyledComponent>
</Heading>
`;

exports[`Storyshots B With color 1`] = `
.c1 {
  font-weight: bold;
}

.c0 {
  margin: 0;
  font-size: 1rem;
  color: #00A1DE;
}

<P
  color="primary"
>
  <StyledComponent
    color="primary"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <BaseComponent
      className="c0"
      color="primary"
    >
      <div
        className="c0"
        color="primary"
      >
        Nisi eu eiusmod cupidatat aute laboris commodo excepteur
        <B>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bwzfXH",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  font-weight: bold;
",
                  ],
                },
                "displayName": "B",
                "render": [Function],
                "styledComponentId": "sc-bwzfXH",
                "target": "b",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <b
              className="c1"
            >
               Bold content 
            </b>
          </StyledComponent>
        </B>
        incididunt incididunt aliquip pariatur est minim officia sit.
      </div>
    </BaseComponent>
  </StyledComponent>
</P>
`;

exports[`Storyshots B Within <P> 1`] = `
.c2 {
  font-weight: bold;
}

.c0 {
  margin: 0;
  font-size: 1rem;
}

.c1 {
  font-size: 0.923rem;
}

<P>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <BaseComponent
      className="c0"
    >
      <div
        className="c0"
      >
        Nisi eu eiusmod cupidatat aute laboris commodo excepteur
        <Small>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-ifAKCX",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  font-size: ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "Small",
                "render": [Function],
                "styledComponentId": "sc-ifAKCX",
                "target": "small",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <small
              className="c1"
            >
              <B>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": undefined,
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bwzfXH",
                        "isStatic": true,
                        "lastClassName": "c2",
                        "rules": Array [
                          "
  font-weight: bold;
",
                        ],
                      },
                      "displayName": "B",
                      "render": [Function],
                      "styledComponentId": "sc-bwzfXH",
                      "target": "b",
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <b
                    className="c2"
                  >
                     Bold content 
                  </b>
                </StyledComponent>
              </B>
            </small>
          </StyledComponent>
        </Small>
        incididunt incididunt aliquip pariatur est minim officia sit.
      </div>
    </BaseComponent>
  </StyledComponent>
</P>
`;
